--- a/blog_client/index.html
+++ b/blog_client/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>blog_client</title>
+    <style type="text/css">
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Avenir', Helvetica, Arial, sans-serif;
+      }
+      a {
+        text-decoration: none;
+        color: #222;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
