--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         text-decoration: none;
         color: #222;
       }
+      #app {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
