--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         text-decoration: none;
         color: #222;
       }
+      code {
+        background-color: #eee;
+        padding: 1px;
+        border-radius: 6px;
+        -webkit-border-radius: 2px;
+      }
       #app {
         margin: 0;
         padding: 0;
